--- a/MyATM_App/MyATM_App.csproj
+++ b/MyATM_App/MyATM_App.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="App\" />
+    <None Remove="UI\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App\" />
+    <Folder Include="UI\" />
+  </ItemGroup>
 </Project>
