Domain for user accounts is added.

--- a/MyATM_App/MyATM_App.csproj
+++ b/MyATM_App/MyATM_App.csproj
@@ -10,9 +10,13 @@
   <ItemGroup>
     <None Remove="App\" />
     <None Remove="UI\" />
+    <None Remove="Domain\" />
+    <None Remove="Domain\Entities\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App\" />
     <Folder Include="UI\" />
+    <Folder Include="Domain\" />
+    <Folder Include="Domain\Entities\" />
   </ItemGroup>
 </Project>
